--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
   <canvas id="hearts" aria-hidden="true"></canvas>
   <div id="glow" aria-hidden="true"></div>
 
+  <div id="intro" class="intro" aria-hidden="true">
+    <div class="introInner">
+      <div class="introTop">For <span id="introName">Yiting</span></div>
+      <div class="introBig">Always and still</div>
+      <div class="introSmall">Tap anywhere to skip</div>
+    </div>
+  </div>
+
   <main class="wrap" id="page">
     <header class="hero" id="hero">
       <div class="badge">For <span id="nameBadge">Yiting</span></div>
